<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:text="@string/update_profile"
        android:textColor="@color/greenLight"
        android:textSize="@dimen/size_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:layout_margin="@dimen/size_20"
        android:elevation="@dimen/size_4"
        app:cardCornerRadius="@dimen/size_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/greenLight">

            <ImageView
                android:id="@+id/imageUser"
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_70"
                android:src="@drawable/ic_icon_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:hint="@string/placeholder_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/size_100"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:hint="@string/placeholder_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/size_100"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:hint="@string/placeholder_weight"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutAge"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:hint="@string/placeholder_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutWeight"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutWeight">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/autoCompleteLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/sexo">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoComplete_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:text="@string/Edit"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:enabled="false"
        android:text="@string/Save"
        app:layout_constraintEnd_toStartOf="@id/buttonLogOut"
        app:layout_constraintStart_toEndOf="@+id/buttonEdit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:text="@string/sair"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>