<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewLogoSignIn"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_180"
            android:layout_marginTop="@dimen/size_70"
            android:src="@drawable/ic_logo_doctors_for_everyone"
            app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldEmailSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmailSignIn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:hint="@string/email_exemple_com"
            app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldPasswordSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogoSignIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInputEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPasswordSignIn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmailSignIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInputPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_75"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPasswordSignIn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_20"
            android:text="@string/signInGoogle"
            android:textSize="@dimen/font_size_create_account"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_buttonWithGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_buttonWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textViewCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_30"
            android:text="@string/create_account"
            android:textColor="@color/greenDark"
            android:textSize="@dimen/font_size_create_account"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="@dimen/size_110"
            android:layout_height="@dimen/size_110"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_splash" />


    </LinearLayout>


</ScrollView>