<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left">

            <ImageView
                android:id="@+id/imageViewArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLogoSignUp"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_180"
            android:layout_marginTop="-20dp"
            android:src="@drawable/ic_logo_doctors_for_everyone"
            app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldEmailSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmailSignUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:hint="@string/email_exemple_com"
            app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldPasswordSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogoSignUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInputEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPasswordSignUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmailSignUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInputPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:text="Cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPasswordSignUp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/size_10"
            android:textColor="@color/greenLight"
            android:text="@string/warning_password"/>

        <LinearLayout
            android:layout_width="@dimen/size_110"
            android:layout_height="@dimen/size_110"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressBarSignUp"
                android:layout_width="@dimen/size_110"
                android:layout_height="@dimen/size_110"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_splash" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>